--- a/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gsk_fSXtdh\n"
+      "gsk_TeaTUZ\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -172,11 +172,12 @@
      "text": [
       "===== 분석 결과 =====\n",
       "<class 'dict'>\n",
-      "{'cons': ['가격이 비쌈', '무게 200 g으로 손목에 부담', '무거운 무게로 인한 피로감'],\n",
-      " 'pros': ['하루 종일 사용 가능한 우수한 배터리 수명', '선명한 카메라 화질', '야간 모드 성능이 뛰어남'],\n",
-      " 'rating': '4.5',\n",
-      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰.'}\n",
-      "배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰.\n"
+      "{'cons': '[\"가격이 비쌈\", \"무게가 200g이 넘어 손이 피로할 수 있음\"]',\n",
+      " 'pros': '[\"배터리 수명이 우수해 하루 종일 충전 없이 사용 가능\", \"카메라 화질이 선명하고 야간 모드 성능이 뛰어남\"]',\n",
+      " 'rating': '4',\n",
+      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰이다.'}\n",
+      "===== 요약 =====\n",
+      "배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰이다.\n"
      ]
     }
    ],
@@ -185,6 +186,7 @@
     "print(\"===== 분석 결과 =====\")\n",
     "print(type(output))\n",
     "pprint(output)\n",
+    "print(\"===== 요약 =====\")\n",
     "print(output['summary'])"
    ]
   },
@@ -206,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
+   "display_name": "mylangchain-app-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
