--- a/src/mylangchain_app/00Basic/003-1_PydanticParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-1_PydanticParser.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gsk_fSX\n"
+      "gsk_Tea\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output should be formatted as a JSON instance that conforms to the JSON schema below.\n",
+      "\n",
+      "As an example, for the schema {\"properties\": {\"foo\": {\"title\": \"Foo\", \"description\": \"a list of strings\", \"type\": \"array\", \"items\": {\"type\": \"string\"}}}, \"required\": [\"foo\"]}\n",
+      "the object {\"foo\": [\"bar\", \"baz\"]} is a well-formatted instance of the schema. The object {\"properties\": {\"foo\": [\"bar\", \"baz\"]}} is not well-formatted.\n",
+      "\n",
+      "Here is the output schema:\n",
+      "```\n",
+      "{\"properties\": {\"movie_title\": {\"description\": \"추천 영화 제목\", \"title\": \"Movie Title\", \"type\": \"string\"}, \"reason\": {\"description\": \"추천 이유\", \"title\": \"Reason\", \"type\": \"string\"}, \"genre\": {\"description\": \"영화 장르\", \"items\": {\"type\": \"string\"}, \"title\": \"Genre\", \"type\": \"array\"}, \"estimated_rating\": {\"description\": \"10점 만점에서 예상 평점\", \"title\": \"Estimated Rating\", \"type\": \"number\"}}, \"required\": [\"movie_title\", \"reason\", \"genre\", \"estimated_rating\"]}\n",
+      "```\n"
+     ]
+    }
+   ],
    "source": [
     "# Pydantic 출력 파서 초기화\n",
     "parser = PydanticOutputParser(pydantic_object=MovieRecommendation)\n",
@@ -83,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +150,7 @@
      "output_type": "stream",
      "text": [
       "<class '__main__.MovieRecommendation'>\n",
-      "MovieRecommendation(movie_title='스크림(1996)', reason='90년대 감성 물씬 나는 마스크 살인마가 등장하는 메타 공포물. 클래식한 슬래셔 요소에 현대적인 해석을 더해 당대 관객들에게 큰 충격을 줬으며, 오늘날까지도 회자되는 명장면들이 많다.', genre=['공포', '스릴러', '메타퍼블릭', '슬래셔'], estimated_rating=8.5)\n"
+      "MovieRecommendation(movie_title='스크림(1996)', reason='1990년대 감성의 고교 배경과 ‘규칙’을 파헹친 메타 공포로 클래식한 동시에 현대적 재미까지 선사합니다.', genre=['공포', '스릴러', '미스터리'], estimated_rating=8.6)\n"
      ]
     }
    ],
@@ -150,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -158,9 +174,9 @@
      "output_type": "stream",
      "text": [
       "추천 영화: 스크림(1996)\n",
-      "추천 이유: 90년대 감성 물씬 나는 마스크 살인마가 등장하는 메타 공포물. 클래식한 슬래셔 요소에 현대적인 해석을 더해 당대 관객들에게 큰 충격을 줬으며, 오늘날까지도 회자되는 명장면들이 많다.\n",
-      "장르: 공포, 스릴러, 메타퍼블릭, 슬래셔\n",
-      "예상 평점: 8.5/10\n"
+      "추천 이유: 1990년대 감성의 고교 배경과 ‘규칙’을 파헹친 메타 공포로 클래식한 동시에 현대적 재미까지 선사합니다.\n",
+      "장르: 공포, 스릴러, 미스터리\n",
+      "예상 평점: 8.6/10\n"
      ]
     }
    ],
@@ -188,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
+   "display_name": "mylangchain-app-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
