--- a/src/mylangchain_app/00Basic/003-3_DatetimeParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-3_DatetimeParser.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gsk_Te\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-09-23 10:49:20.498361\n",
+      "날짜 출력 형식 지시사항:\n",
+      "Write a datetime string that matches the following pattern: '%Y-%m-%dT%H:%M:%S.%fZ'.\n",
+      "\n",
+      "Examples: 2023-07-04T14:30:00.000000Z, 1999-12-31T23:59:59.999999Z, 2025-01-01T00:00:00.000000Z\n",
+      "\n",
+      "Return ONLY this string, no other words!\n"
+     ]
+    }
+   ],
    "source": [
     "print(datetime.today())\n",
     "\n",
@@ -63,9 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['text'] input_types={} partial_variables={'format_instructions': \"Write a datetime string that matches the following pattern: '%Y-%m-%dT%H:%M:%S.%fZ'.\\n\\nExamples: 2023-07-04T14:30:00.000000Z, 1999-12-31T23:59:59.999999Z, 2025-01-01T00:00:00.000000Z\\n\\nReturn ONLY this string, no other words!\"} messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['format_instructions', 'text'], input_types={}, partial_variables={}, template=\"\\n현재 날짜: 2025-09-23\\n다음 텍스트에서 날짜/시간 정보를 추출하세요. 상대적 표현(예: '다음 주 금요일')은 현재 날짜를 기준으로 계산합니다.\\n텍스트: {text}\\n\\n{format_instructions}\\n\"), additional_kwargs={})]\n"
+     ]
+    }
+   ],
    "source": [
     "# 프롬프트 템플릿\n",
     "# 현재 날짜를 명시적으로 프롬프트에 주입\n",
@@ -85,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,9 +136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2025-09-23 (Tuesday)'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "current_date = datetime.now().strftime(\"%Y-%m-%d (%A)\")\n",
     "current_date"
@@ -116,9 +157,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['회의는 한달 후 오후 2시에 예정되어 있습니다.',\n",
+       " '현재 날짜는 2025-09-23 (Tuesday)입니다. 프로젝트 마감일은 다음 주 목요일입니다.',\n",
+       " '행사 시작은 다음 달 첫날입니다.',\n",
+       " '3일 후 오후 3시30분에 시스템 점검이 진행됩니다.',\n",
+       " '지난주 금요일 정오에 전시회가 있었습니다.']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 테스트 데이터 (다양한 날짜 형식 포함)\n",
     "texts = [\n",
@@ -133,9 +189,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "원본 텍스트: 회의는 한달 후 오후 2시에 예정되어 있습니다.\n",
+      "추출된 날짜: 2025-10-23 14:00:00 \n",
+      "\n",
+      "원본 텍스트: 현재 날짜는 2025-09-23 (Tuesday)입니다. 프로젝트 마감일은 다음 주 목요일입니다.\n",
+      "추출된 날짜: 2025-10-02 00:00:00 \n",
+      "\n",
+      "원본 텍스트: 행사 시작은 다음 달 첫날입니다.\n",
+      "추출된 날짜: 2025-10-01 00:00:00 \n",
+      "\n",
+      "원본 텍스트: 3일 후 오후 3시30분에 시스템 점검이 진행됩니다.\n",
+      "추출된 날짜: 2025-09-26 15:30:00 \n",
+      "\n",
+      "원본 텍스트: 지난주 금요일 정오에 전시회가 있었습니다.\n",
+      "추출된 날짜: 2025-09-19 12:00:00 \n"
+     ]
+    }
+   ],
    "source": [
     "# 체인 실행 및 결과 출력\n",
     "chain = prompt | model | datetime_parser\n",
@@ -176,9 +254,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- 이벤트명: 크리스마스 마켓  \n",
+      "  날짜: 2025-12-10 00:00:00  \n",
+      "\n",
+      "- 이벤트명: 크리스마스 이브 파티  \n",
+      "  날짜: 2025-12-24 00:00:00  \n",
+      "\n",
+      "- 이벤트명: 새해 카운트다운  \n",
+      "  날짜: 2025-01-01 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# 이벤트 추출용 프롬프트\n",
     "current_date = datetime.now().strftime(\"%Y-%m-%d\")\n",
@@ -225,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
+   "display_name": "mylangchain-app-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -239,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
