--- a/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +172,12 @@
      "text": [
       "===== 분석 결과 =====\n",
       "<class 'dict'>\n",
-      "{'cons': '[\"가격이 비쌈\", \"무게가 200g이 넘어 손이 피로할 수 있음\"]',\n",
-      " 'pros': '[\"배터리 수명이 우수해 하루 종일 충전 없이 사용 가능\", \"카메라 화질이 선명하고 야간 모드 성능이 뛰어남\"]',\n",
+      "{'cons': '가격이 비쌈, 무게가 200g이 넘어 무거움, 손에 피로감이 생길 수 있음',\n",
+      " 'pros': '배터리 수명이 길어 하루 종일 사용 가능, 카메라 화질이 선명함, 야간 모드 성능이 훌륭함',\n",
       " 'rating': '4',\n",
-      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰이다.'}\n",
+      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰'}\n",
       "===== 요약 =====\n",
-      "배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰이다.\n"
+      "배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰\n"
      ]
     }
    ],
