--- a/src/mylangchain_app/00Basic/003-4_EnumParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-4_EnumParser.ipynb
@@ -37,7 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "gsk_f\n"
+      "gsk_T\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
      "output_type": "stream",
      "text": [
       "parser=EnumOutputParser(enum=<enum 'Sentiment'>) retry_chain=PromptTemplate(input_variables=['completion', 'error', 'instructions'], input_types={}, partial_variables={}, template='Instructions:\\n--------------\\n{instructions}\\n--------------\\nCompletion:\\n--------------\\n{completion}\\n--------------\\n\\nAbove, the Completion did not satisfy the constraints given in the Instructions.\\nError:\\n--------------\\n{error}\\n--------------\\n\\nPlease try again. Please only respond with an answer that satisfies the constraints laid out in the Instructions:')\n",
-      "| ChatOpenAI(client=<openai.resources.chat.completions.completions.Completions object at 0x000001EE73BCEA20>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x000001EE7383E270>, root_client=<openai.OpenAI object at 0x000001EE720653A0>, root_async_client=<openai.AsyncOpenAI object at 0x000001EE7383E180>, model_name='moonshotai/kimi-k2-instruct-0905', temperature=0.0, model_kwargs={}, openai_api_key=SecretStr('**********'), openai_api_base='https://api.groq.com/openai/v1')\n",
+      "| ChatOpenAI(client=<openai.resources.chat.completions.completions.Completions object at 0x10c4ebb50>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x10c5f9810>, root_client=<openai.OpenAI object at 0x10bf7e190>, root_async_client=<openai.AsyncOpenAI object at 0x10c5f92d0>, model_name='moonshotai/kimi-k2-instruct-0905', temperature=0.0, model_kwargs={}, openai_api_key=SecretStr('**********'), openai_api_base='https://api.groq.com/openai/v1')\n",
       "| StrOutputParser()\n",
       "모델 및 파서 설정 완료\n"
      ]
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-SBe-Yh6W-py3.12",
+   "display_name": "mylangchain-app-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -487,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
