--- a/src/mylangchain_app/02Ollama/013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
+++ b/src/mylangchain_app/02Ollama/013_Ollama_DeepSeek-r1_Qwen3연동.ipynb
@@ -1088,8 +1088,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.11/site-packages/gradio/chat_interface.py:348: UserWarning: The 'tuples' format for chatbot messages is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style 'role' and 'content' keys.\n",
       "  self.chatbot = Chatbot(\n"
      ]
@@ -1098,14 +1096,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "* To create a public link, set `share=True` in `launch()`.\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1118,51 +1116,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG] 입력 질문: 안녕하세요\n",
+      "[DEBUG] 입력 질문: 박근하가 누군지 아세요?\n",
       "[DEBUG] 질문 타입: <class 'str'>\n",
       "[DEBUG] 추론 결과 타입: <class 'str'>\n",
       "[DEBUG] 추론 결과 길이: 9\n",
       "[DEBUG] 추론 결과 미리보기: <think>\n",
       "\n",
       "...\n",
-      "[DEBUG] generate 함수 - 질문: 안녕하세요\n",
+      "[DEBUG] generate 함수 - 질문: 박근하가 누군지 아세요?\n",
       "[DEBUG] generate 함수 - 추론 길이: 9\n",
       "[DEBUG] generate 함수 - 추론 미리보기: <think>\n",
       "\n",
       "...\n",
       "[DEBUG] 프롬프트 메시지 생성 완료\n",
       "[DEBUG] 최종 응답 타입: <class 'str'>\n",
-      "[DEBUG] 최종 응답 길이: 902\n",
+      "[DEBUG] 최종 응답 길이: 926\n",
       "[DEBUG] 최종 응답 내용: <think>\n",
-      "Okay, let's tackle this query. The user said \"안녕하세요\" which is Korean for \"Hello.\" They provided an inference process but didn't specify what it was. Since the task is to generate a response based on the inference, I need to figure out what the inference might be.\n",
+      "Okay, let's tackle this query. The user is asking if Park Geun-ha is someone, but the provided inference process is just a single sentence. First, I need to figure out who Park Geun-ha is. From what I remember, Park Geun-ha is a South Korean singer and former member of the K-pop group BTOB. She's known for her vocal skills and has been active in the music industry.\n",
       "\n",
-      "The user might be testing if I can understand and respond without explicit instructions. The previous example had a similar structure, so maybe the inference was about a specific topic. Since the user didn't elaborate, I should create a general, friendly response that's appropriate for a greeting.\n",
-      "\n",
-      "I should keep the response natural and conversational. Maybe mention that the greeting is a common way to start a conversation and offer assistance. Make sure it's in Korean, as required. Avoid any markdown and keep it simple. Check for clarity and relevance to the greeting.\n",
+      "The user's question is straightforward, but the inference process given is brief. I should confirm her identity without overcomplicating it. The answer should be concise, stating her profession and notable achievements. Also, I need to make sure the response is in Korean and natural, without any markdown. Let me check if there's any additional information needed, but since the inference is limited, I'll stick to the key points.\n",
       "</think>\n",
       "\n",
-      "안녕하세요! 반갑습니다. 오늘도 좋은 하루 보내세요! 도와드릴 수 있어요. 😊\n",
-      "[DEBUG] 입력 질문: 파이썬이 무엇인가요?\n",
+      "박근하(박근하)는 한국의 가수로, K-pop 그룹 BTOB의 멤버이자, 음반 산업에서 활동한 유명 음악가입니다. 그는 가창력과 팀워크로 유명하며, 다양한 음악 프로젝트에서 기여한 바 있습니다.\n",
+      "[DEBUG] 입력 질문: 박근하가 누군지 아세요?\n",
       "[DEBUG] 질문 타입: <class 'str'>\n",
       "[DEBUG] 추론 결과 타입: <class 'str'>\n",
-      "[DEBUG] 추론 결과 길이: 713\n",
+      "[DEBUG] 추론 결과 길이: 9\n",
       "[DEBUG] 추론 결과 미리보기: <think>\n",
-      "Okay, the user is asking about Python. I should start by explaining what Python is and its main features.\n",
       "\n",
-      "I'll mention that it's a high-level programming language known for its simplicity and...\n",
-      "[DEBUG] generate 함수 - 질문: 파이썬이 무엇인가요?\n",
-      "[DEBUG] generate 함수 - 추론 길이: 713\n",
+      "...\n",
+      "[DEBUG] generate 함수 - 질문: 박근하가 누군지 아세요?\n",
+      "[DEBUG] generate 함수 - 추론 길이: 9\n",
       "[DEBUG] generate 함수 - 추론 미리보기: <think>\n",
-      "Okay, the user is asking about Python. I should start by explaining what Python is and its main features.\n",
       "\n",
-      "I'll mention that it's a high-level programming language known for its simplicity and...\n",
+      "...\n",
       "[DEBUG] 프롬프트 메시지 생성 완료\n",
       "[DEBUG] 최종 응답 타입: <class 'str'>\n",
-      "[DEBUG] 최종 응답 길이: 293\n",
+      "[DEBUG] 최종 응답 길이: 753\n",
       "[DEBUG] 최종 응답 내용: <think>\n",
+      "Okay, let's see. The user is asking who Pak Kwon-ha is. The previous response was a process analysis, but I need to generate a concise answer in Korean without mentioning the inference process.\n",
+      "\n",
+      "First, I should recall that Pak Kwon-ha is a Korean singer and songwriter. She's known for her music and has been active in the entertainment industry. The user might be looking for basic information about her.\n",
+      "\n",
+      "I need to make sure the answer is accurate and in Korean. Avoid any mention of the inference steps. Just state her profession and some notable achievements. Keep it simple and direct.\n",
       "</think>\n",
       "\n",
-      "파이썬은 고급 라이브러리와 직관적인 문법을 갖춘 고유한 프로그래밍 언어로, 데이터 분석, 웹 개발, 인공지능, 게임 개발 등 다양한 분야에서 널리 사용됩니다. 파이썬은 코드의 간결함과 가독성에 중점을 두고 설계되었으며, 데이터 구조(리스트, 딕셔너리 등)와 다양한 기능이 풍부하게 제공됩니다. 또한, 데이터 과학과 사이버 보안 분야에서는 파이썬의 라이브러리들이 강력한 도구로 활용되고 있습니다. 파이썬은 학습 curve가 비교적 가벼운 점도 특징으로, 다양한 분야에서 활용 가능성이 높습니다.\n"
+      "박근하(박근하)는 한국의 음악가 및 가사 작곡가입니다. 그는 다양한 음악 앨범을 발매하며 음악 산업에 활동하고 있으며, 특히 팝 뮤직과 관련된 음악을 창작하여 주목받고 있습니다. 그의 음악은 독특한 스타일과 깊은 감성으로 편안한 청취자들을 유치하고 있습니다.\n",
+      "[DEBUG] 입력 질문: 박근하가 누군지 아세요? 예/아니오 둘 중 하나로 대답해 주세요.\n",
+      "[DEBUG] 질문 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 길이: 1070\n",
+      "[DEBUG] 추론 결과 미리보기: <think>\n",
+      "Alright, I need to figure out whether \"박근하가 누군지 아?\" means \"Are you from Korea?\" or \"Is it Korean?\"\n",
+      "\n",
+      "First, I'll break down the sentence.\n",
+      "\n",
+      "\"박근하가 누군지 아?\" translates to \"Does your country belong ...\n",
+      "[DEBUG] generate 함수 - 질문: 박근하가 누군지 아세요? 예/아니오 둘 중 하나로 대답해 주세요.\n",
+      "[DEBUG] generate 함수 - 추론 길이: 1070\n",
+      "[DEBUG] generate 함수 - 추론 미리보기: <think>\n",
+      "Alright, I need to figure out whether \"박근하가 누군지 아?\" means \"Are you from Korea?\" or \"Is it Korean?\"\n",
+      "\n",
+      "First, I'll break down the sentence.\n",
+      "\n",
+      "\"박근하가 누군지 아?\" translates to \"Does your country belong ...\n",
+      "[DEBUG] 프롬프트 메시지 생성 완료\n",
+      "[DEBUG] 최종 응답 타입: <class 'str'>\n",
+      "[DEBUG] 최종 응답 길이: 763\n",
+      "[DEBUG] 최종 응답 내용: <think>\n",
+      "Okay, the user is asking if \"박근하가 누군지 아세요?\" means \"Are you from Korea?\" or \"Is it Korean?\" I need to determine the correct answer.\n",
+      "\n",
+      "First, I'll analyze the sentence structure. \"박근하가\" is \"Park Geun-ha,\" a Korean singer. The question is asking if this person is from Korea or if the language is Korean.\n",
+      "\n",
+      "So, the answer should clarify that Park Geun-ha is a Korean person, but the question might be confusing the country and the language. The user might be mixing up the two concepts.\n",
+      "\n",
+      "I should explain that the answer is yes, but the confusion comes from the question's phrasing. The key is to confirm that Park Geun-ha is Korean, even though the question might be ambiguous.\n",
+      "</think>\n",
+      "\n",
+      "박근하가 한국 사람이며, 질문의 맥락에서 \"누군지\"는 한국의 사람이라는 의미로 해석될 수 있습니다. 따라서 답변은 \"예\"입니다.\n",
+      "[DEBUG] 입력 질문: 박근하가 누군지 아세요?\n",
+      "[DEBUG] 질문 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 길이: 9\n",
+      "[DEBUG] 추론 결과 미리보기: <think>\n",
+      "\n",
+      "...\n",
+      "[DEBUG] generate 함수 - 질문: 박근하가 누군지 아세요?\n",
+      "[DEBUG] generate 함수 - 추론 길이: 9\n",
+      "[DEBUG] generate 함수 - 추론 미리보기: <think>\n",
+      "\n",
+      "...\n",
+      "[DEBUG] 프롬프트 메시지 생성 완료\n",
+      "[DEBUG] 최종 응답 타입: <class 'str'>\n",
+      "[DEBUG] 최종 응답 길이: 1266\n",
+      "[DEBUG] 최종 응답 내용: <think>\n",
+      "Okay, let's see. The user is asking who Pak Jun-ha is. The inference process given is that Pak Jun-ha is a Korean singer and songwriter. So, I need to make sure my answer is accurate and in Korean.\n",
+      "\n",
+      "First, I should confirm that Pak Jun-ha is indeed a well-known figure in the Korean music industry. His real name is Pak Jun-ha, and he's known for his music. The inference mentions he's a singer and songwriter, so I should highlight that.\n",
+      "\n",
+      "I need to structure the answer clearly. Start by stating his name and profession, then mention his contributions to the music industry. Also, note his popularity and any notable works. Make sure the response is concise but informative, using natural Korean without any markdown.\n",
+      "\n",
+      "Check for any possible errors. Did I miss any key points? The user might want to know his background, achievements, or why he's famous. Including that he's a singer and songwriter, and his role in the industry, should cover it. Avoid any technical terms that might not be understood. Keep it friendly and professional.\n",
+      "</think>\n",
+      "\n",
+      "박근하(박준하)는 한국의 심리학자 및 음악가입니다. 그는 심리학적 분석을 바탕으로 창작한 음악을 주로 발표하며, 특히 흥한 음악과 뮤직비디오 분야에서 주목받고 있습니다. 그의 작품은 감정적 주제와 정서적인 표현을 강조하며, 팬들의 공감을 유발하고 있습니다. 박근하는 자신의 예술적 배경을 통해 독특한 시각을 지닌 음악을 제작하며, 한국 음악 산업의 발전에 기여하고 있습니다.\n",
+      "[DEBUG] 입력 질문: 박근하가 누군지 아세요?\n",
+      "[DEBUG] 질문 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 타입: <class 'str'>\n",
+      "[DEBUG] 추론 결과 길이: 9\n",
+      "[DEBUG] 추론 결과 미리보기: <think>\n",
+      "\n",
+      "...\n",
+      "[DEBUG] generate 함수 - 질문: 박근하가 누군지 아세요?\n",
+      "[DEBUG] generate 함수 - 추론 길이: 9\n",
+      "[DEBUG] generate 함수 - 추론 미리보기: <think>\n",
+      "\n",
+      "...\n",
+      "[DEBUG] 프롬프트 메시지 생성 완료\n",
+      "[DEBUG] 최종 응답 타입: <class 'str'>\n",
+      "[DEBUG] 최종 응답 길이: 1029\n",
+      "[DEBUG] 최종 응답 내용: <think>\n",
+      "Okay, let's see. The user is asking who Park Geun-ha is. The inference process given is that Park Geun-ha is a South Korean politician and former leader of the Democratic People's Republic of Korea (DPRK). He was the leader of the DPRK from 1972 to 1980. The user might be interested in his background, role, or historical significance.\n",
+      "\n",
+      "I need to make sure the answer is accurate and concise. Since the user didn't specify a particular aspect, I should cover his role as a leader, his tenure, and his impact. Also, mention his current status as a former leader. Avoid any extra information not in the inference. Keep it natural and in a conversational tone. Check for any potential errors, like the correct title or country. Make sure the answer is direct and addresses the question without elaborating unnecessarily.\n",
+      "</think>\n",
+      "\n",
+      "박근하(박근하)는 대한민국의 정치인으로, 1972년부터 1980년까지 동해제국의 대통령을 맡았으며, 이후 한국의 정치·국제 분야에서 중요한 역할을 담당했습니다. 그는 국제 협상과 외교 전략에 특화된 전문가로, 한반도 문제 해결에 기여한 실적을 인정받았습니다. 현재는 그의 정치적 활동이 종식된 이후로도 다양한 논의와 분석이 이루어지고 있습니다.\n"
      ]
     }
    ],
