--- a/src/mylangchain_app/00Basic/011_LangSmith_Basic.ipynb
+++ b/src/mylangchain_app/00Basic/011_LangSmith_Basic.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "b76f68a8-4745-4377-8057-6090b87377d1",
    "metadata": {
     "id": "b76f68a8-4745-4377-8057-6090b87377d1"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "on0y4xF8VoyE",
    "metadata": {
     "id": "on0y4xF8VoyE"
@@ -96,29 +96,13 @@
      "text": [
       "\n",
       "🔹 [AI 답변]:\n",
-      "LangGraph와 LangChain은 모두 언어 모델을 활용하여 애플리케이션을 구축하기 위한 프레임워크이지만, 두 프레임워크는 다른 디자인 철학과 사용 사례에 중점을 둡니다.\n",
+      "LangGraph와 LangChain은 모두 언어 모델을 활용하여 애플리케이션을 구축하기 위한 프레임워크이지만, 두 프레임워크는 서로 다른 목적과 설계 철학을 가지고 있습니다.\n",
       "\n",
-      "LangChain:\n",
+      "LangChain은 언어 모델을 사용하여 애플리케이션을 구축하기 위한 오픈 소스 프레임워크입니다. LangChain은 언어 모델을 중심으로 하는 애플리케이션 개발을 단순화하기 위해 설계되었으며, 개발자가 언어 모델을 쉽게 통합하고, 미세 조정하고, 확장할 수 있도록 지원합니다.\n",
       "\n",
-      "LangChain은 언어 모델을 사용하여 애플리케이션을 구축하기 위한 오픈 소스 프레임워크입니다. 주요 목표는 개발자가 언어 모델을 쉽게 통합하고 확장 가능하며 효율적인 애플리케이션을 구축할 수 있도록 하는 것입니다. LangChain은 언어 모델, 메모리 및 외부 세계와의 상호 작용을 관리하는 모듈식 아키텍처를 제공합니다.\n",
+      "LangGraph는 LangChain을 기반으로 구축된 그래프 기반 에이전트 프레임워크입니다. LangGraph는 에이전트 워크플로를 구축하기 위해 특별히 설계되었으며, LangChain의 기능을 확장하여 에이전트의 행동을 더욱 유연하고 동적으로 정의할 수 있도록 지원합니다.\n",
       "\n",
-      "LangGraph:\n",
-      "\n",
-      "LangGraph는 LangChain을 만든 동일한 팀에서 개발한 고급 워크플로우 엔진 및 에이전트 플랫폼입니다. LangGraph를 사용하면 여러 도구, 데이터 소스 및 언어 모델을 사용하여 복잡한 애플리케이션과 워크플로를 구축할 수 있습니다. LangGraph는 에이전트 기반 시뮬레이션, 다중 단계 추론 및 동적 워크플로 관리에 중점을 둡니다.\n",
-      "\n",
-      "주요 차이점:\n",
-      "\n",
-      "1. 목적:\n",
-      "    * LangChain: 확장 가능하고 효율적인 애플리케이션을 구축하기 위한 언어 모델 통합에 중점을 둡니다.\n",
-      "    * LangGraph: 여러 도구와 언어 모델을 사용하여 복잡한 워크플로 및 에이전트 기반 애플리케이션을 관리하는 고급 워크플로 엔진 및 에이전트 플랫폼을 제공하는 것을 목표로 합니다.\n",
-      "2. 아키텍처:\n",
-      "    * LangChain: 언어 모델, 메모리 및 외부 세계와의 상호 작용을 관리하는 모듈식 아키텍처를 제공합니다.\n",
-      "    * LangGraph: 에이전트 기반 시뮬레이션, 다중 단계 추론 및 동적 워크플로 관리를 지원하는 고급 워크플로 엔진으로 설계되었습니다.\n",
-      "3. 사용 사례:\n",
-      "    * LangChain: 챗봇, 언어 번역 및 텍스트 요약과 같은 애플리케이션에 적합합니다.\n",
-      "    * LangGraph: 여러 에이전트, 도구 및 데이터 소스가 포함된 복잡한 워크플로가 필요한 시뮬레이션, 자동화 및 의사 결정과 같은 애플리케이션에 적합합니다.\n",
-      "\n",
-      "요약하면 LangChain은 언어 모델 통합을 위한 보다 일반적인 프레임워크인 반면 LangGraph는 복잡한 워크플로 및 에이전트 기반 애플리케이션을 구축하기 위한 특수 플랫폼입니다. LangGraph는 LangChain을 기반으로 구축되었으며 두 프레임워크는 서로 보완적인 것으로 간주될 수 있습니다.\n"
+      "즉, LangChain은 언어 모델 애플리케이션 개발을 위한 기본 프레임워크인 반면, LangGraph는 LangChain을 기반으로 에이전트 워크플로를 구축하기 위한 고급 프레임워크입니다.\n"
      ]
     }
    ],
