--- a/src/mylangchain_app/00Basic/006_Gemini활용.ipynb
+++ b/src/mylangchain_app/00Basic/006_Gemini활용.ipynb
@@ -521,10 +521,111 @@
       "}\n",
       "].\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "생성된 코드:\n",
+      "물론입니다. Python으로 두 숫자의 최대공약수(GCD, Greatest Common Divisor)를 구하는 몇 가지 간단한 방법을 소개해 드리겠습니다.\n",
+      "\n",
+      "### 1. `math` 모듈 사용 (가장 간단하고 권장되는 방법)\n",
+      "\n",
+      "Python 3.5 버전부터 `math` 모듈에 `gcd()` 함수가 내장되어 있어 가장 쉽게 사용할 수 있습니다.\n",
+      "\n",
+      "```python\n",
+      "import math\n",
+      "\n",
+      "# 두 숫자를 정의합니다.\n",
+      "num1 = 54\n",
+      "num2 = 24\n",
+      "\n",
+      "# math.gcd() 함수를 사용하여 최대공약수를 계산합니다.\n",
+      "result = math.gcd(num1, num2)\n",
+      "\n",
+      "print(f\"{num1}과(와) {num2}의 최대공약수는 {result}입니다.\")\n",
+      "\n",
+      "# 출력 결과:\n",
+      "# 54과(와) 24의 최대공약수는 6입니다.\n",
+      "```\n",
+      "\n",
+      "---\n",
+      "\n",
+      "### 2. 유클리드 호제법(Euclidean Algorithm)을 직접 구현하는 방법\n",
+      "\n",
+      "`math` 모듈을 사용하지 않고, 최대공약수를 구하는 가장 효율적인 알고리즘인 유클리드 호제법을 직접 구현할 수도 있습니다.\n",
+      "\n",
+      "**원리:**\n",
+      "두 수 a, b가 있을 때 (a > b), `a`와 `b`의 최대공약수는 `b`와 `a를 b로 나눈 나머지`의 최대공약수와 같습니다. 이 과정을 나머지가 0이 될 때까지 반복하면, 그 때의 나누는 수가 최대공약수가 됩니다.\n",
+      "\n",
+      "#### 반복문(while)을 이용한 구현\n",
+      "\n",
+      "```python\n",
+      "def gcd_euclidean(a, b):\n",
+      "  \"\"\"\n",
+      "  유클리드 호제법(반복문)을 사용하여 최대공약수를 구하는 함수\n",
+      "  \"\"\"\n",
+      "  while b:  # b가 0이 될 때까지 반복\n",
+      "    a, b = b, a % b\n",
+      "  return a\n",
+      "\n",
+      "# 두 숫자를 정의합니다.\n",
+      "num1 = 54\n",
+      "num2 = 24\n",
+      "\n",
+      "# 직접 만든 함수를 호출합니다.\n",
+      "result = gcd_euclidean(num1, num2)\n",
+      "\n",
+      "print(f\"{num1}과(와) {num2}의 최대공약수는 {result}입니다.\")\n",
+      "\n",
+      "# 출력 결과:\n",
+      "# 54과(와) 24의 최대공약수는 6입니다.\n",
+      "```\n",
+      "*   `a, b = b, a % b`는 Python의 튜플 패킹/언패킹을 이용한 간결한 표현입니다.\n",
+      "*   `temp = b`, `b = a % b`, `a = temp` 와 동일한 작업을 한 줄로 처리합니다.\n",
+      "\n",
+      "#### 재귀 함수(Recursion)를 이용한 구현\n",
+      "\n",
+      "유클리드 호제법의 원리를 재귀적으로 표현하면 코드가 더 직관적일 수 있습니다.\n",
+      "\n",
+      "```python\n",
+      "def gcd_recursive(a, b):\n",
+      "  \"\"\"\n",
+      "  유클리드 호제법(재귀)을 사용하여 최대공약수를 구하는 함수\n",
+      "  \"\"\"\n",
+      "  if b == 0:\n",
+      "    return a\n",
+      "  else:\n",
+      "    return gcd_recursive(b, a % b)\n",
+      "\n",
+      "# 두 숫자를 정의합니다.\n",
+      "num1 = 54\n",
+      "num2 = 24\n",
+      "\n",
+      "# 직접 만든 함수를 호출합니다.\n",
+      "result = gcd_recursive(num1, num2)\n",
+      "\n",
+      "print(f\"{num1}과(와) {num2}의 최대공약수는 {result}입니다.\")\n",
+      "\n",
+      "# 출력 결과:\n",
+      "# 54과(와) 24의 최대공약수는 6입니다.\n",
+      "```\n",
+      "\n",
+      "### 요약\n",
+      "\n",
+      "| 방법 | 장점 | 단점 | 추천 대상 |\n",
+      "|---|---|---|---|\n",
+      "| **`math.gcd()`** | **가장 간단하고 빠름**, Python 표준 라이브러리 기능 | Python 3.5 이상에서만 사용 가능 | **모든 사용자에게 가장 먼저 권장** |\n",
+      "| **유클리드 호제법 (반복)** | 라이브러리 없이 구현 가능, 효율적 | 직접 코드를 작성해야 함 | 알고리즘 학습 또는 구버전 Python 환경 |\n",
+      "| **유클리드 호제법 (재귀)** | 알고리즘의 수학적 원리를 잘 표현, 코드가 간결함 | 숫자가 매우 클 경우 재귀 깊이 제한에 걸릴 수 있음 | 알고리즘 학습, 재귀적 사고 연습 |\n",
+      "\n",
+      "==================================================\n",
+      "예제 6: 창의적 콘텐츠 생성\n",
+      "==================================================\n"
+     ]
     }
    ],
    "source": [
-    "\n",
     "print(\"\\n\" + \"=\" * 50)\n",
     "print(\"예제 3: 번역 체인\")\n",
     "print(\"=\" * 50)\n",
@@ -573,17 +674,67 @@
     "\n",
     "print(\"\\n\" + \"=\" * 50)\n",
     "print(\"예제 6: 창의적 콘텐츠 생성\")\n",
-    "print(\"=\" * 50)\n"
+    "print(\"=\" * 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "001da18f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E0000 00:00:1758777753.313155 2334887 alts_credentials.cc:93] ALTS creds ignored. Not running on GCP and untrusted ALTS is not enabled.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "창의적 아이디어: ## 하늘을 나는 도시: 초고속 자기 부상 열차 네트워크\n",
+      "\n",
+      "**개요:** 지상의 교통 체증 문제를 해결하고, 도시 간 이동 시간을 획기적으로 단축하기 위한 혁신적인 교통 시스템입니다.  하늘을 나는 도시라는 비전 아래, 자기 부상 기술을 기반으로 한 초고속 열차 네트워크를 구축하여 지상 교통과의 완벽한 통합을 이루는 것을 목표로 합니다.\n",
+      "\n",
+      "**핵심 기술:**\n",
+      "\n",
+      "* **초고속 자기 부상 기술:** 기존 자기 부상 열차의 한계를 극복한,  초전도체를 이용한 고속 자기 부상 기술을 적용합니다. 이를 통해 시속 1,000km 이상의 속도를 달성하고, 안정성과 효율성을 극대화합니다.\n",
+      "* **고정밀 항공 제어 시스템:** 다수의 열차가 동시에 운행되는 환경에서 안전을 보장하기 위한 고정밀 항공 제어 시스템을 개발합니다. 레이저 기반 위치 탐지, 인공지능 기반 교통 관리 시스템,  실시간 위험 감지 시스템 등을 통합하여 안전 운행을 보장합니다.\n",
+      "* **모듈식 건설 시스템:**  경량화된 모듈식 구조물을 이용하여  건설 시간과 비용을 최소화합니다.  3D 프린팅 기술과 로봇 공학을 활용하여 효율적인 건설을 추진합니다.\n",
+      "* **지상과의 통합 시스템:** 기존 대중교통 시스템과 연계하여,  열차 역사와 지하철, 버스 등과의 원활한 환승 시스템을 구축합니다. 승객들은 스마트폰 애플리케이션을 통해 최적의 경로를 안내 받고, 예약 및 결제를 편리하게 이용할 수 있습니다.\n",
+      "* **지속 가능한 에너지원:**  태양광, 풍력 등 지속 가능한 에너지원을 활용하여 환경 친화적인 교통 시스템을 구현합니다.  에너지 효율을 극대화하는 설계를 통해  운영 비용을 절감하고 탄소 배출량을 최소화합니다.\n",
+      "\n",
+      "\n",
+      "**실현 가능성:**\n",
+      "\n",
+      "* **단계적 접근:**  일부 구간을 우선적으로 건설하여 기술 검증 및 시스템 안정화를 거친 후 단계적으로 확장합니다.\n",
+      "* **민관 합동 투자:**  정부의 적극적인 지원과 민간 투자 유치를 통해 자금을 확보합니다.\n",
+      "* **국제 협력:**  해외 선진 기술과의 협력을 통해 기술 개발과 건설을 효율적으로 추진합니다.\n",
+      "\n",
+      "\n",
+      "**기대 효과:**\n",
+      "\n",
+      "* 도시 간 이동 시간 획기적 단축 (서울-부산 30분 이내)\n",
+      "* 교통 체증 해소 및 교통 사고 감소\n",
+      "* 경제적 효과 창출 (관광, 물류 등)\n",
+      "* 환경 오염 감소 및 지속 가능한 사회 구축\n",
+      "\n",
+      "**결론:** 하늘을 나는 도시 프로젝트는 단순한 교통 시스템 개선을 넘어, 미래 사회의 지속 가능한 발전에 기여할 혁신적인 비전입니다.  단계적인 접근과 국제적인 협력을 통해  이 야심찬 프로젝트의 성공적인 실현을 기대합니다.\n",
+      "\n",
+      "==================================================\n",
+      "Gemini 모델 옵션\n",
+      "==================================================\n",
+      "• gemini-1.5-flash: 빠른 응답, 일반 작업\n",
+      "• gemini-1.5-pro: 정확한 분석, 복잡한 추론\n",
+      "• gemini-pro-vision: 이미지 처리 가능\n",
+      "• temperature: 0.1(정확) ~ 0.9(창의적)\n",
+      "==================================================\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "# 창의적 생성용 높은 temperature\n",
     "llm_creative = ChatGoogleGenerativeAI(\n",
     "    model=\"gemini-1.5-flash\",\n",
