--- a/src/mylangchain_app/00Basic/003-1_PydanticParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-1_PydanticParser.ipynb
@@ -43,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -58,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +159,7 @@
      "output_type": "stream",
      "text": [
       "<class '__main__.MovieRecommendation'>\n",
-      "MovieRecommendation(movie_title='스크림(1996)', reason='1990년대 감성의 고교 배경과 ‘규칙’을 파헹친 메타 공포로 클래식한 동시에 현대적 재미까지 선사합니다.', genre=['공포', '스릴러', '미스터리'], estimated_rating=8.6)\n"
+      "MovieRecommendation(movie_title='The Sixth Sense', reason='1999년작으로 1990년대 감성을 잘 간직한 클래식한 분위기의 공포 스릴러입니다. 귀신을 볼 수 있는 소년과 그를 돕는 심리상담사의 이야기를 통해 점차 밝혀지는 반전이 인상적입니다.', genre=['공포', '스릴러', '드라마'], estimated_rating=8.5)\n"
      ]
     }
    ],
@@ -166,17 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "추천 영화: 스크림(1996)\n",
-      "추천 이유: 1990년대 감성의 고교 배경과 ‘규칙’을 파헹친 메타 공포로 클래식한 동시에 현대적 재미까지 선사합니다.\n",
-      "장르: 공포, 스릴러, 미스터리\n",
-      "예상 평점: 8.6/10\n"
+      "추천 영화: The Sixth Sense\n",
+      "추천 이유: 1999년작으로 1990년대 감성을 잘 간직한 클래식한 분위기의 공포 스릴러입니다. 귀신을 볼 수 있는 소년과 그를 돕는 심리상담사의 이야기를 통해 점차 밝혀지는 반전이 인상적입니다.\n",
+      "장르: 공포, 스릴러, 드라마\n",
+      "예상 평점: 8.5/10\n"
      ]
     }
    ],
@@ -204,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
