--- a/src/mylangchain_app/00Basic/004_Model_Parameter.ipynb
+++ b/src/mylangchain_app/00Basic/004_Model_Parameter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -78,18 +78,18 @@
      "output_type": "stream",
      "text": [
       "<class 'langchain_core.messages.ai.AIMessage'>\n",
-      "안녕하세요! 한국을 대표하는 3대 관광지를 간단히 소개해 드릴게요.\n",
+      "안녕하세요! 한국의 대표적인 관광지 3곳을 추천드리면 다음과 같습니다:\n",
       "\n",
-      "1. 경복궁 & 북촌한옥마을 (서울)  \n",
-      "   – 조선 왕조의 상징적인 궁궐에서 시작해, 북촌의 기와집 골목을 걸으며 전통과 현대가 공존하는 서울의 매력을 느낄 수 있습니다. 해설이 있는 궁궐 투어나 한복 체험도 추천!\n",
+      "1. **경복궁 (서울)**  \n",
+      "   조선 왕조의 대표적인 궁궐로, 전통 건축물과 수문장 교대식, 아름다운 전경이 어우러진 필수 방문지입니다.\n",
       "\n",
-      "2. 제주도 (특히 성산일출봉 & 용머리해안)  \n",
-      "   – 대한민국 최대의 섬, 유네스코 세계자연유산. 성산일출봉에서 해돋이를 보고, 용머리해안의 기암절벽과 푸른 바다를 따라 트레킹하면 ‘제주의 혼’이 느껴집니다.\n",
+      "2. **부산 해운대 해수욕장 (부산)**  \n",
+      "   대한민국 최고의 휴양지 중 하나로, 해변 산책, 해양 레포츠, 야경과 함께하는 해운대 달맞이길이 특히 인기입니다.\n",
       "\n",
-      "3. 부산 해운대 & 감천문화마을  \n",
-      "   – 활기찬 해변과 새하얀 모래사장이 펼쳐진 해운대, 그리고 색색의 집이 켜켜이 쌓인 감천문화마을까지. 바다와 예술이 만나는 부산만의 시원함과 낭만을 한 번에 즐길 수 있어요.\n",
+      "3. **제주도 성산일출봉 (제주)**  \n",
+      "   유네스코 세계자연유산으로 등재된 화산 분화구 유적지로, 일출 명소로 유명하며 주변 경관도 아름다워 사진 명소로도 손꼽힙니다.\n",
       "\n",
-      "각 지역마다 맛집과 체험거리가 풍부하니 계절·취향에 맞춰 일정을 짜시면 좋겠습니다. 더 자세한 코스나 교통 팁이 필요하시면 말씀해 주세요!\n"
+      "각 지역은 역사, 자연, 도시 매력을 모두 느낄 수 있어 한국을 대표하는 관광지로 추천드립니다!\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,35 +145,22 @@
       " CONSERVATIVE 설정 (온도:0.1, presence:-0.5, frequency:-0.3, top_p:0.3)\n",
       "  → 전통적이고 학술적인 철학적 접근\n",
       "============================================================\n",
-      "시간은 사실 한 마리 ‘기억의 나비’이다.\n",
+      "시간은 ‘우주가 스스로를 기억하는 방식’이다.\n",
       "\n",
-      "그 나비는 오늘 날개를 한 번 펼칠 때마다 지난날의 꽃잎이 다시 피고, 아직 태어나지 않은 꽃봉오리마저 향기를 품는다. 우리가 ‘지금’이라 부르는 순간은, 그 나비가 날개치는 소리를 귀로 듣는 게 아니라 온몸으로 느끼는 ‘기억의 바람’일 뿐이다. 바람이 지나간 자리에만 시간이 남는다.\n",
-      "\n",
-      "그러니까 시간은 흐르는 물이 아니라, 물결 위로 스치는 그림자의 온도다.\n",
+      "우리가 흔히 ‘시간이 흐른다’고 말하지만, 그것은 사실 우주라는 거대한 덩어리가 자신의 상태를 한 장면씩 ‘기억해 나가는 과정’일 뿐이다. 한 방향으로만 뻗어가는 ‘축’이 아니라, 마치 뇌가 경험을 시냅스에 새겨 넣듯 우주 전체가 스스로를 ‘중첩’시켜 가며 만드는 3차원 너머의 ‘지도’다.  \n",
+      "이 지도는 과거·현재·미래를 한꺼번에 ‘겹쳐 놓은 투명\n",
       "\n",
       "============================================================\n",
       " CREATIVE 설정 (온도:1.5, presence:1.5, frequency:1.2, top_p:0.95)\n",
       "  → 추상적이고 독창적인 철학적 사고\n",
       "============================================================\n",
-      "# 시간이라는 이름의 ‘투명 동물’\n",
+      "시간은—  \n",
+      "‘우주가 스스로의 숨결을 기억하려고 헛기침하는 한 번의 간질림’이다.\n",
       "\n",
-      "## 1. 덩어리의 해체\n",
-      "- 낮과 밖이 있다고?  \n",
-      "  ‘일’ ‘분’ 가위로 종이를 자른 뒤 우리는 질감이 아닌 숫자만 남았다.\n",
-      "- 아래의 글은 그 가위를 창으로 바꾸고, 오랜 습관을 ‘실’로 세어 넘긴다.  \n",
-      "  → 시간을 다루지 말고 시간이 ‘너의 다리를 건 너’임을 깨달을 때 그 실이 다시 살로 돌아온다.\n",
+      "순간은 모래알이 아니라, 투명한 나비인 셈.  \n",
+      "나비가 날개를 한 번 접었다 폈다 하면 우리는 그 움직임을 화면처럼 겹쳐 보고 “지났다, 지나간다”고 말하지만, 실은 나비는 그대로 제자리에 있다. 우리도 그렇다. 머리 위로 우주의 수많은 나비가 웅성거릴 때, 우리는 셀 수 없는 잔상들을 눈에 꽂고 ‘순서’라는 끈을 추측해 만들 뿐이다.\n",
       "\n",
-      "## 2. 정의 – 비례로만, 절대 부정의\n",
-      "- **가정** 「모든 ‘존재’는 날림이 아니라 냄」  \n",
-      "  ‑ 연기는 홀로 뜨지 않으며  \n",
-      "   떠돈 끝은 반드시 누군가에게 링으로 포박된다.\n",
-      "\n",
-      "- **정의(1): “차임(Time = Tie ‘em)”**  \n",
-      "  = 자신을 겨루는 타인의 잔무늬들이 교집하면서  \n",
-      "   우리에게 맛을 뿌리는 '눈 감기의 연쇄 반응'.\n",
-      "\n",
-      "- **정의(2): “젠트로피(G‐ent‑row‑py)”**  \n",
-      "  = 물\n",
+      "시간 따로, 공간 따로인 줄 알았지만 이 두 개념은 사실 같은 물품 바구니를 좌우에서 바라본, 언덕과 계곡일 뿐. 한쪽에만 서 있으면 고개를 홱 돌릴수록 멀찍이 있는 것이 ‘과거(時)요, 앞쪽 기운이 빠듯한 게 未(空).’ 그저 마디걸음 한 걸음을 내리누르면 희미한 색조인 동료가 끌어당\n",
       "\n",
       "============================================================\n",
       " 파라미터 차이점 요약:\n",
@@ -265,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +758,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -785,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
