--- a/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-2_StructuredParser.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +181,12 @@
      "text": [
       "===== 분석 결과 =====\n",
       "<class 'dict'>\n",
-      "{'cons': '가격이 비쌈, 무게가 200g이 넘어 무거움, 손에 피로감이 생길 수 있음',\n",
-      " 'pros': '배터리 수명이 길어 하루 종일 사용 가능, 카메라 화질이 선명함, 야간 모드 성능이 훌륭함',\n",
+      "{'cons': ['가격이 다소 비쌈', '무게가 200 g을 넘어 무겁고 손이 피로함'],\n",
+      " 'pros': ['하루 종일 사용 가능한 배터리 수명', '선명한 카메라 화질', '우수한 야간 모드 성능'],\n",
       " 'rating': '4',\n",
-      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰'}\n",
+      " 'summary': '배터리와 카메라 성능이 뛰어나지만 가격과 무게는 다소 부담스러운 스마트폰'}\n",
       "===== 요약 =====\n",
-      "배터리와 카메라 성능이 뛰어나지만 가격과 무게가 다소 부담스러운 스마트폰\n"
+      "배터리와 카메라 성능이 뛰어나지만 가격과 무게는 다소 부담스러운 스마트폰\n"
      ]
     }
    ],
@@ -208,7 +217,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
