--- a/src/mylangchain_app/00Basic/003-3_DatetimeParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-3_DatetimeParser.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -55,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-09-23 10:49:20.498361\n",
+      "2025-09-26 16:21:54.193163\n",
       "날짜 출력 형식 지시사항:\n",
       "Write a datetime string that matches the following pattern: '%Y-%m-%dT%H:%M:%S.%fZ'.\n",
       "\n",
@@ -85,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input_variables=['text'] input_types={} partial_variables={'format_instructions': \"Write a datetime string that matches the following pattern: '%Y-%m-%dT%H:%M:%S.%fZ'.\\n\\nExamples: 2023-07-04T14:30:00.000000Z, 1999-12-31T23:59:59.999999Z, 2025-01-01T00:00:00.000000Z\\n\\nReturn ONLY this string, no other words!\"} messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['format_instructions', 'text'], input_types={}, partial_variables={}, template=\"\\n현재 날짜: 2025-09-23\\n다음 텍스트에서 날짜/시간 정보를 추출하세요. 상대적 표현(예: '다음 주 금요일')은 현재 날짜를 기준으로 계산합니다.\\n텍스트: {text}\\n\\n{format_instructions}\\n\"), additional_kwargs={})]\n"
+      "input_variables=['text'] input_types={} partial_variables={'format_instructions': \"Write a datetime string that matches the following pattern: '%Y-%m-%dT%H:%M:%S.%fZ'.\\n\\nExamples: 2023-07-04T14:30:00.000000Z, 1999-12-31T23:59:59.999999Z, 2025-01-01T00:00:00.000000Z\\n\\nReturn ONLY this string, no other words!\"} messages=[HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['format_instructions', 'text'], input_types={}, partial_variables={}, template=\"\\n현재 날짜: 2025-09-26\\n다음 텍스트에서 날짜/시간 정보를 추출하세요. 상대적 표현(예: '다음 주 금요일')은 현재 날짜를 기준으로 계산합니다.\\n텍스트: {text}\\n\\n{format_instructions}\\n\"), additional_kwargs={})]\n"
      ]
     }
    ],
@@ -115,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2025-09-23 (Tuesday)'"
+       "'2025-09-26 (Friday)'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,20 +166,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['회의는 한달 후 오후 2시에 예정되어 있습니다.',\n",
-       " '현재 날짜는 2025-09-23 (Tuesday)입니다. 프로젝트 마감일은 다음 주 목요일입니다.',\n",
+       " '현재 날짜는 2025-09-26 (Friday)입니다. 프로젝트 마감일은 다음 주 목요일입니다.',\n",
        " '행사 시작은 다음 달 첫날입니다.',\n",
        " '3일 후 오후 3시30분에 시스템 점검이 진행됩니다.',\n",
        " '지난주 금요일 정오에 전시회가 있었습니다.']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,16 +207,16 @@
      "text": [
       "\n",
       "원본 텍스트: 회의는 한달 후 오후 2시에 예정되어 있습니다.\n",
-      "추출된 날짜: 2025-10-23 14:00:00 \n",
+      "추출된 날짜: 2025-10-26 14:00:00 \n",
       "\n",
-      "원본 텍스트: 현재 날짜는 2025-09-23 (Tuesday)입니다. 프로젝트 마감일은 다음 주 목요일입니다.\n",
+      "원본 텍스트: 현재 날짜는 2025-09-26 (Friday)입니다. 프로젝트 마감일은 다음 주 목요일입니다.\n",
       "추출된 날짜: 2025-10-02 00:00:00 \n",
       "\n",
       "원본 텍스트: 행사 시작은 다음 달 첫날입니다.\n",
       "추출된 날짜: 2025-10-01 00:00:00 \n",
       "\n",
       "원본 텍스트: 3일 후 오후 3시30분에 시스템 점검이 진행됩니다.\n",
-      "추출된 날짜: 2025-09-26 15:30:00 \n",
+      "추출된 날짜: 2025-09-29 15:30:00 \n",
       "\n",
       "원본 텍스트: 지난주 금요일 정오에 전시회가 있었습니다.\n",
       "추출된 날짜: 2025-09-19 12:00:00 \n"
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +277,7 @@
       "  날짜: 2025-12-24 00:00:00  \n",
       "\n",
       "- 이벤트명: 새해 카운트다운  \n",
-      "  날짜: 2025-01-01 00:00:00\n"
+      "  날짜: 2026-01-01 00:00:00\n"
      ]
     }
    ],
@@ -318,7 +327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -332,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
