--- a/src/mylangchain_app/00Basic/003-4_EnumParser.ipynb
+++ b/src/mylangchain_app/00Basic/003-4_EnumParser.ipynb
@@ -17,7 +17,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/eon/skRookies/myLangChain/mylangchain-app/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
@@ -133,7 +142,7 @@
      "output_type": "stream",
      "text": [
       "parser=EnumOutputParser(enum=<enum 'Sentiment'>) retry_chain=PromptTemplate(input_variables=['completion', 'error', 'instructions'], input_types={}, partial_variables={}, template='Instructions:\\n--------------\\n{instructions}\\n--------------\\nCompletion:\\n--------------\\n{completion}\\n--------------\\n\\nAbove, the Completion did not satisfy the constraints given in the Instructions.\\nError:\\n--------------\\n{error}\\n--------------\\n\\nPlease try again. Please only respond with an answer that satisfies the constraints laid out in the Instructions:')\n",
-      "| ChatOpenAI(client=<openai.resources.chat.completions.completions.Completions object at 0x10c4ebb50>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x10c5f9810>, root_client=<openai.OpenAI object at 0x10bf7e190>, root_async_client=<openai.AsyncOpenAI object at 0x10c5f92d0>, model_name='moonshotai/kimi-k2-instruct-0905', temperature=0.0, model_kwargs={}, openai_api_key=SecretStr('**********'), openai_api_base='https://api.groq.com/openai/v1')\n",
+      "| ChatOpenAI(client=<openai.resources.chat.completions.completions.Completions object at 0x1321156a0>, async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x132116120>, root_client=<openai.OpenAI object at 0x131dcecf0>, root_async_client=<openai.AsyncOpenAI object at 0x132115e80>, model_name='moonshotai/kimi-k2-instruct-0905', temperature=0.0, model_kwargs={}, openai_api_key=SecretStr('**********'), openai_api_base='https://api.groq.com/openai/v1')\n",
       "| StrOutputParser()\n",
       "모델 및 파서 설정 완료\n"
      ]
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mylangchain-app-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -487,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
