--- a/src/mylangchain_app/01RAG/010_RAG_Pipeline_3Embedding.ipynb
+++ b/src/mylangchain_app/01RAG/010_RAG_Pipeline_3Embedding.ipynb
@@ -1085,7 +1085,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "mylangchain-app-py3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1099,7 +1099,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
